# blog

./: .gitignore  Cargo.toml  astro.config.mjs  docker-compose.yml  package-lock.json  package.json  rust-ile-blog-yapmak.md
backend/: Cargo.toml
backend/src/: frontmatter.rs  lib.rs  main.rs  markdown.rs
backend/src/entities/: front_matter.rs  markdown.rs  mod.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20251110_072405_frontmatter.rs  m20251110_072424_markdown.rs
src/: consts.ts  content.config.ts  main.rs  metadata.rs
src/components/: Footer.astro  Header.astro  Latest.astro  Post.astro  Posts.astro
src/content/blog/: first-post.md  second-post.md  third-post.md
src/layouts/: Main.astro
src/pages/: index.astro
src/pages/blog/: [slug].astro
src/styles/: global.css
